k8s-deployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-fastapi
  ports:
    - name: http
      port: 8081
      targetPort: 8081

  type: LoadBalancer
# loadBalancerIP: 127.0.0.1
